--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "[![Actions Status](https://github.com/Miranevl/backend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Miranevl/backend-project-44/actions)",
   "main": "index.js",
   "bin": {
-    "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-games": "bin/games/brain-games.js",
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/games/brain-calc.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
