--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "git+https://github.com/Miranevl/backend-project-44.git"
   },
-  "author": "",
+  "author": "Vladislav Kovalenko",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Miranevl/backend-project-44/issues"
