--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "bin": {
     "brain-games": "bin/games/brain-games.js",
     "brain-even": "bin/brain-even.js",
-    "brain-calc": "bin/games/brain-calc.js"
+    "brain-calc": "bin/games/brain-calc.js",
+    "brain-gcd": "bin/games/brain-gcd.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/Miranevl/backend-project-44#readme",
   "dependencies": {
+    "lodash": "^4.17.21",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
