--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "main": "index.js",
   "bin": {
     "brain-games": "bin/games/brain-games.js",
-    "brain-even": "bin/brain-even.js",
+    "brain-even": "bin/games/brain-even.js",
     "brain-calc": "bin/games/brain-calc.js",
-    "brain-gcd": "bin/games/brain-gcd.js"
+    "brain-gcd": "bin/games/brain-gcd.js",
+    "brain-progression": "bin/games/brain-progression.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
