--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "[![Actions Status](https://github.com/Miranevl/backend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Miranevl/backend-project-44/actions)",
   "main": "index.js",
   "bin": {
-    "brain-games": "bin/games/brain-games.js",
+    "brain-games": "bin/brain-games.js",
     "brain-even": "bin/games/brain-even.js",
     "brain-calc": "bin/games/brain-calc.js",
     "brain-gcd": "bin/games/brain-gcd.js",
